# example-project

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements_dev.txt
.config/: .checkov.yml  cspell.json
.github/ISSUE_TEMPLATE/: 01_bug_report.yml  02_feature_request.yml
.github/workflows/: ci.yml  repo_config.yml
docs/: README.md
src/example_project/: __init__.py
tests/unit/: test_example_project.py
