[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "example_project"
description = "Short Project Description"
requires-python = ">=3.8"
authors = [
    {name = "Kevin Green", email = "kgreen1200@gmail.com"},
]
readme = {file = "docs/README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
classifiers = [
    # TODO: Add / update using classifiers from https://pypi.org/classifiers/
    "Development Status :: 1 - Planning",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: MkDocs",
]
dynamic = ["version"]
dependencies = []

[project.optional-dependencies]
test = [
    "pytest==8.*",
    "pytest-cov==5.*",
]
docs = [
    "mkdocs-material[git]==9.*"
]
lint = [
    "black==24.*",
    "isort==5.*",
    "ruff==0.*",
    "bandit",
]

[project.urls]
Homepage = "https://kgreen1200.github.io/example-project"
Documentation = "https://kgreen1200.github.io/example-project"
Repository = "https://github.com/kgreen1200/example-project"
Issues = "https://github.com/kgreen1200/example-project/issues"
Changelog = "https://github.com/kgreen1200/example-project/blob/main/docs/CHANGELOG.md"

[tool.setuptools.dynamic]
version = {attr = "example_project.__version__"}